Major Component manual update. Still needs a few comp identification tables, as well as some components: Isotropic_Sqw and FermiChopper seem of high priority
git-svn-id: https://svn.mccode.org/svn/McStasTeX@79 feec88ba-9254-4c29-afb0-2c2f27bf560d

--- a/trunk/Component_manual.tex
+++ b/trunk/Component_manual.tex
@@ -80,7 +80,6 @@
 \include{intro_comp}
 \include{techniq}
 \include{comp}
-\include{instr_examples}
 \include{comp_removed}
 %\include{comp_future}
 
@@ -92,7 +91,7 @@
 \include{terms}       % as in manual
 
 \addcontentsline{toc}{chapter}{\protect\numberline{}{Bibliography}}
-\bibliography{mcstas_comp}
+\bibliography{mcstas}
 \bibliographystyle{jacs}
 
 \addcontentsline{toc}{chapter}{\protect\numberline{}{Index and keywords}}
