--- a/trunk/Monitor_Optimizer.tex
+++ b/trunk/Monitor_Optimizer.tex
@@ -1,7 +1,7 @@
 % Emacs settings: -*-mode: latex; TeX-master: "manual.tex"; -*-
 
-\section{Monitor\_Optimizer: Optimization locations for the
-  Source\_Optimizer component}
+\section{Monitor\_Optimizer: Optimization locations for the\\
+  Source\_Optimizer}
 \label{monitor-optimizer}
 \component{Source\_Optimizer}{E. Farhi}{optim\_comp}{$x_{min}$, $x_{max}$, $y_{min}$,$y_{max}$}{not fully validated}
 
