--- a/trunk/arm.tex
+++ b/trunk/arm.tex
@@ -13,8 +13,6 @@ The use of arm components in the instrument definitions
 is not required but is recommended for clarity.
 
 {\bf Arm} has no input parameters.
-An example of the use of this component is given in the
-sample instrument definitions, listed in Appendix \ref{instcode}.
 
-An alternative to the Arm component is the {\bf Progress\_bar} which does the same as Arm, {\it i.e.} nothing, but also displays the simulation progess, and optionally saves regularly the data files in the course of the simulation, so that you can look at it raising \emph{during} the simulation.
+An alternative to the Arm component is the {\bf Progress\_bar} (see section \ref{s:progress-bar}) which does the same as Arm, {\it i.e.} nothing, but also displays the simulation progess, and optionally saves regularly the data files in the course of the simulation, so that you can look at it raising \emph{during} the simulation.
 
