--- a/trunk/changes.tex
+++ b/trunk/changes.tex
@@ -1,162 +1,66 @@
 % Emacs settings: -*-mode: latex; TeX-master: "manual.tex"; -*-
 
-\chapter{New features in \MCS\ versions 1.7 - \version\ }
+\chapter{New features in \MCS\ \version\ }
 \label{c:changes}
 
-Many new features have been implemented in \MCS\ version \version\  since
-version 1.5 (no version 1.6. manual was written, the most important being that
-\MCS\ can now compile and run in a Windows enviroment.  The list of changes
-given here may be particularly  useful to experienced \MCS\ users who do not
-wish to read the whole  manual, searching only for new features. A global
-upward compatibility  exists for all changes, and thus all previous components
-and  instruments should work as before. Changes are labelled as 1.7 or 1.8 to 
-indicate in which \MCS\ version they appeared.
+This version of \MCS\ implements both new features, as well as many bug corrections, especially for the Windows plateform. Bugs are reported and traced using the \MCS\ Bugzilla system \cite{mczilla_webpage}. We will not present here an extensive list of corrections, and we let the reader refer to this bug reporting service for details. Only important changes are indicated here.
 
-Important note for Windows users: It is a known problem that some of
-the \MCS\ tools do not support filenames / directories with spaces.
-We are working on a more general approach to this problem, which will
-hopefully be solved in the next release.
+Of course, we can not garranty that the sofware is bullet proof, but we do our best to correct bugs, when they are reported.
 
 \section{General}
 \label{s:new-features:general}
 As of \MCS\ version \version\, the license covering the \MCS\ package
 is the GNU General Pubclic License. See \verb+http://www.gnu.org+ for details.
 
-\section{Kernel} 
+\section{Kernel}
 \label{s:new-features:kernel}
 \index{Kernel}
 
 The following changes concern the 'Kernel' (i.e. the \MCS\ meta-language and program). See the dedicated chapter in the {\it User manual} for more details.
 
 \begin{itemize}
-\item \MCS\ can now compile for Windows!
-\item Instrument parameters may now have default values, the same way as components do 
-    (appeared in 1.8). \index{Parameters!Optional, default value}
-\item An instrument source file may contain \texttt{EXTEND} \%\{ \ldots \}\% C
-    blocks just after the usual \texttt{AT} \ldots \texttt{ROTATED} \ldots
-    keywords, to extend the behaviour of existing components, without touching
-    their code. All local component variables are  available. This may for
-    instance be used to add a new 'color' to neutrons,  i.e. assign a new
-    characteristic variable to the neutron (appeared in 1.7).
-    \index{Keyword!EXTEND}
-\item Component instances in an instrument file may be \texttt{GROUP}'ed into 
-    exclusive assembly, i.e.\ only one component of the group will intercept
-    the neutron ray, the rest will be skipped. This is useful for multi
-    monochromators multi detectors, multiple collimators, etc.  After the
-    \texttt{ROTATED} keyword, the keyword \texttt{GROUP} should be added
-    followed by a group name (e.g. \texttt{GROUP} MyGroup)  (appeared in 1.7).
-    \index{Keyword!GROUP}    
-\item The instrument and components may have string (\verb+char*+) setting
-    parameters. For components, their length is limited to 1024 characters
-    (appeared in 1.7). \index{Parameters!Instruments} \index{Parameters!Setting}
-\item In both components and instruments, the \texttt{FINALLY} section, that is
-    executed at the end of simulations, has been supplemented with a new
-    \texttt{SAVE} section. This latter is executed at simulation end (just
-    before the \texttt{FINALLY} section), but also each time an intermediate
-    save is required (e.g.\   when a 'kill -USR2 \$pid' is used under Unix, see
-    section \ref{s:new-features:run-time})  (appeared in 1.7). 
-    \index{Keyword!SAVE} \index{Keyword!FINALLY} \index{Signal handler!USR2 signal}
-\item Components may have a \texttt{SHARE} section, which is imported only once
-    per type of component. \texttt{SHARE} has the same role as
-    \texttt{DECLARE}, but is useful when several instances of the same
-    component is used in a single simulation  (appeared in 1.7).
-    \index{Keyword!SHARE} \index{Keyword!DECLARE}
-\item The component files may have some \texttt{\%include} inside '\%\{ \}\%'
-    \texttt{DECLARE} or \texttt{SHARE} C blocks. The files to include are
-    searched locally, and then in the library. If an extension is found, only
-    the specified file is included, else both  .h and .c are embedded unless
-    the --no-runtime has been specified. As in previous releases, the
-    instrument files can embed external files, both in C blocks  and in the
-    instrument parts (\texttt{DECLARE}, etc.) (appeared in 1.7).
-    \index{Keyword!%include}
-\item The \texttt{PREVIOUS} keyword, to be used after \texttt{RELATIVE} in
-    place of component instance names refers to the preceeding component, and
-    does not require to actually know  its name. Similarly the
-    \texttt{PREVIOUS(n)} keyword refers to the $n$-th preceeding component
-    (appeared in 1.8). \index{Keyword!PREVIOUS}
+\item Instrument description files exchanged between Unix and Windows platefroms could not be compiled occasionally. This has been solved (bug \#28).
 \end{itemize}
 
-\section{Run-time} 
+\section{Run-time}
 \label{s:new-features:run-time}
 \index{Library!Run-time}
 
-Some important modifications were done to the 'Run-time' library 
-(i.e.\ the functions used in the instrument program). 
-Some details may be found in {\it Running} chapter of the {\it User manual}
-as well as in the appendix~\ref{c:kernelcalls}.
-
 \begin{itemize}
-\item A global gravitation handling is now available, by setting the \verb+-g+ flag.
-\item Many output formats are available for data. Use the
-    \verb+--format="format"+ flag, e.g. \verb+--format="Scilab"+.  The default
-    format is McStas/PGPLOT, but may be specified globally using the
-    \verb+MCSTAS_FORMAT+ environment variable.  See section~\ref{s:run-format}
-    for details (appeared in 1.7). \index{Environment variable!MCSTAS\_FORMAT}
-    \index{Data format}
-\item It is possible to save 3D data arrays, by calling the DETECTOR\_OUT\_3D
-    macro. (handled as 2D by \verb+mcplot+ by ignoring the 3rd dimension)
-    (appeared in 1.7).  \index{Library!Run-time!DETECTOR\_OUT}
-\item The C type of the 'number of events' array in monitors (usually named
-    \verb+L_N+) was changed from \verb+int+ to \verb+double+, to avoid overflow.
-    All 'home-made' monitors should be updated accordingly (appeared in 1.7).
-\item The \verb+USR2+ signal generates an intermediate save for all monitors,
-    during the simulation (executes the \texttt{SAVE} section). The \verb+USR1+
-    signal still gives informations (appeared in 1.7). \index{Signal handler!USR1 signal}
-\item New \verb+randvec_target_rect+ and \verb+randvec_target_rect_angular+
-    functions now focus  on a rectangle (more efficient than the former
-    \verb+randvec_target_sphere+) (appeared in 1.7 and 1.8).
-    \index{Library!Run-time!randvec\_target\_rect}
+\item Gravitation support has been validated. There was a bug revealed with long wavelength neutrons. Some components (see e.g. some guides) still do not support this option (bug \#1).
+\item Monitor binning was most of the time not centered, but left justified. Data files are now ok, but Matlab, Scilab, Octave and IDL plotter routines are to be updated (bugs \#11, 12, 39).
+
+\item McStas can use MPI parallel processing, if it is properly installed.
+\item Alternatively, a basic 'grid' computing may be used to split scan steps onto a list of machines.
+
+\item Plenty of warning messages to guide the user in interpreting possibly wrong results have been added in the simulation output messages (bug \#29, 43).
+\item Support for sample environments is now possible using the Isotropic\_Sqw in Concentric mode. Refer to that component help.
+
 \end{itemize}
 
 
-\section{Components and Library} 
+\section{Components and Library}
 \label{s:new-features:components}
 \index{Components} \index{Library!Components}
-  
-  We here list some of the new components (found in the \MCS\ \verb+lib+ directory) 
+
+We here list some of the new components (found in the \MCS\ \verb+lib+ directory)
 which are detailed in the {\it Component manual}, also mentioned in
 the {\it Component Overview} of the {\it User Manual}.
-  
+
 \begin{itemize}
-\item All components now have a valid header for \texttt{mcdoc} automatic documentation, as well as usage example.
-\item \texttt{contrib} This directory now contains contributed
-    components. Those that will be found to be highly stable will then
-    go into the other component categories. Contributed components
-    (\verb+Guide_honeycomb+, \verb+Guide_tapering+,
-    \verb+Guide_curved+, \verb+ISIS_moderator+) have been
-    placed there (appeared in 1.7 and 1.8). \index{Library!Components!contrib}
-\item \texttt{data} This directory now contains example data files mainly for Laue diffraction, transmission and reflection files. \index{Library!Components!data}
-\item \texttt{doc} The documentation is now included in the \verb+doc+ directory. \index{Library!Components!doc}
-\item \texttt{example} A new \verb+example+ directory contains instrument examples, available from the \verb+mcgui+ 'Neutron site' menu Tool.\index{Library!Instruments}
-\item \texttt{misc} Updated \verb+Vitess_input+ and \verb+Vitess_output+ components according to Vitess >= 2.3 Neutron structure.\index{Library!Components!misc}
-\item \texttt{misc} A \verb+Progress_bar+ component may be positioned anywhere in the simulation and displays the simulation percentage. It may also save temporary data files regularly so that one can have a look \index{Tools!mcplot} (using \verb+mcplot+) at the results on-the-fly before the end of the simulation.
-\item \texttt{monitors} The \verb+Monitor_nD+ component may be used as a replacement for all monitors. It may have automatic limits mode for either all or selected monitored variables. It may also plot banana monitors for \verb+mcdisplay+ and monitor something else than the intensity, e.g. the mean energy on a XY psd (appeared in 1.7). \index{Library!Components!monitors} A bug (atan2) was corrected in \verb+PSD_monitor_4PI+. \index{Library!Components!monitors}
-\item \texttt{obsolete} Some components were renamed by categories for better sorting. Old components are still available, but not maintained anymore. We highly encourage to avoid using these when writing new instrument definitions. \index{Library!Components!obsolete}
-\item \texttt{optics} components were renamed by categories, starting with
-   Guide\_\ldots, Monochromator\_\ldots, Filter\_\ldots etc so that sorting is
-   easier (appeared in 1.7). \index{Library!Components!optics}
-\item \texttt{optics} Monochromator\_curved can read reflectivity and transmission tables (appeared in 1.7).   
-\item \texttt{optics} Guide\_gravity can handle a 2D array of channels, and
-    has options for subdivisions in length, chamfers and wavyness.
-\item \texttt{optics} Filter\_gen can read a table from a file and affect the neutron
-    beam (replaces the obsolete \verb+Flux_adapter+). It may act as a filter or a
-    source (appeared in 1.7).    
-\item \texttt{optics} Bugs were corrected in the following components: Bender, Chopper, Guide\_channeled. Some similar components were gathered. New components were added: Guide\_gravity, Guide\_wavy, Filter\_gen. \index{Library!Components!optics}
-\item \texttt{samples} can now target towards any component, given its index 
-    (no need to compute \verb+target_x|y|z+ vector, use e.g. \verb+target_index=1+). 
-    Position an \verb+Arm+ at the focusing position when targetting to 
-    centered components (appeared in 1.7). \index{Library!Components!samples}
-\item \texttt{samples} Rectangular focusing has been implemented
-  (instead of circular) in most components. More sample shapes are
-  available. A bug has been corrected in Single\_crystal. A Powder2
-  component (2 rings) has been added. Sans\_spheres is a new sample
-  component for small angle scattering. Phonon\_simple is a new sample
-  for phonon scattering. (appeared in 1.8). \index{Library!Components!samples}
-\item \texttt{share} Many dedicated libraries are now available as shared code for reading tables,
-    handling data files and monitors. These are C functions to be \texttt{\%include}d
-    into components (see e.g. \verb+MCSTAS/monitors/Monitor_nD.comp+) (appeared in 1.7).
-    \index{Library!Components!share}
-\item \texttt{sources} The \verb+Source_gen+ and \verb+Source_Maxwell_3+ components may now simulate all kinds of continuous neutron sources. Some bugs were corrected in most sources in order to have an isotropic neutron emission. The \verb+Virtual_input+ and \verb+Virtual_output+ may load and save neutron event files (beware the size of the generated files !). Format may be text or binary (appeared in 1.7). \index{Library!Components!sources}
+\item the Chopper\_Fermi component has been {\bf removed} has it produced notoriously wrong results. Rather use the new FermiChopper and Vitess\_ChopperFermi components.
+\item Many minor bug corrections in:
+Arm (bug \#10),
+Vitess\_input/output (bug \#11),
+Progress\_bar (bug \#14),
+Virtual\_output (bug \#18),
+Powder1, Powder2 (bugs \#20,21),
+Monitor\_nD (bug \#17, 18),
+V\_sample (bug \#31)
+\item New components:
+Isotropic\_Sqw,
+Vitess\_ChopperFermi,
+PowderN
 \end{itemize}
 
 \section{Documentation}
@@ -165,40 +69,7 @@ As of \MCS\ \version\ an improved tutorial has been integrated
 into to the graphical user interface of \MCS\. The content of the
 tutorial is also available in appendix \ref{tutorial}.
 
-\section{Example instruments}
-\label{s:new-features:instruments}
-As mentioned above, \MCS\ \version\ has various improvements regarding
-distribution of instruments. Firstly, \verb+mcgui+ has a new special
-menu for instruments distributed with \MCS and secondly instruments can
-now have default values and thirdly a new \MCS\ tutorial has
-integrated into the user interface. These three new features together
-proves a solid starting point for new users of \MCS\. To further
-increase the value of the package, we have decided to include selveral
-example instruments contributed by \MCS\ users. The full list of 
-example instruments are
-\begin{itemize}
-\item{\verb+vanadium_example+, improved version used in the \MCS\
-    tutorial.}
-\item{\verb+linup-1+-\verb+linup-7+, legacy instruments of the Ris\o\
-    TAS1 instrument from a historical release of \MCS.}
-\item{\verb+h8_test+, model of the Brookhaven H8 triple-axis, written
-    by McStas team member Emmanuel Farhi}
-\item{\verb+ILL_D9+, a model of the ILL D9 hot four-circle
-    diffractometer, contributed by Chris Ling}
-\item{\verb+Hetfull+, a model of the ISIS HET spectrometer,
-    contributed by Dickon Champion}
-\item{\verb+focus_psi+, a model of the PSI FOCUS spectrometer,
-    contributed by Uwe Filges}
-\item{\verb+prisma2+, a model of the ISIS prisma2 spectrometer,
-    written by Kristian Nielsen and Mark Hagen from a historical release of \MCS.}
-\item{Test instruments \verb+ISIStest+ for testing the new
-    \verb+ISIS_moderator+ component, \verb+SANS+ for testing the new
-    \verb+Sans_spheres+ component and \verb+Test_Phonon+ for testing
-    the new \verb+Phonon_simple+ component, all contributed by the
-    corresponding component authors.} 
-\end{itemize}
-
-
+The Component Manual support has been 'restarted'.
 
 \section{Tools, installation}
 \label{s:new-features:tools}
@@ -207,58 +78,21 @@ example instruments are
   A renewal of most \MCS\ Tools, used to edit and display instrument or
   results,  has been undertaken, aiming at proposing alternatives to the
   Perl+PerlTk+PGPLOT+PDL  libraries.
-  
+
   Quite a lot of work was achieved in order to solve the installation problems
    that have been encoutered so far. A fully working \MCS\ distribution now
    only requires a C compiler, perl, perl-Tk and one of Matlab, Scilab and
    (PGPLOT, perl-DL). The Plotlib Scilab library has  been included in the
    package, and does not need to be installed separately anymore.
-  
+
   This has improved significantly the portability of \MCS\ and thus simplified
   the installation of the package. Details about the installation and the
   available tools are given in the {\it Installing \MCS} chapter of the {\it User Manual}.
 
 \begin{itemize}
-\item The list of required packages for a complete \MCS\ installation is now a C
-    compiler, Perl, PerlTk and Scilab or Matlab.
-\item Matlab, Scilab and IDL may read directly McStas results if the simulation
-    was executed with the \verb+--format="..."+ option 
-    (see~\ref{s:new-features:run-time} changes). The former PGPLOT interface is
-    still supported (appeared in 1.7).  \index{Tools!Matlab}
-    \index{Tools!Scilab}  \index{Tools!IDL} \index{Tools!Perl libraries}   
-\item\verb+mcgui+ can now perform \verb+mcrun+-like parameter scans
-    directly from the gui (appeared in 1.8).
-\item\verb+mcgui+ has now a 'Neutron site' menu which enables to load directly one of the
-    instrument examples (appeared in 1.8).
-\item \verb+mcrun+ can generate scan results in all formats (appeared in 1.8). 
-   \index{Tools!mcrun}
-\item \verb+mcrun+ has a \MCS\ self test procedure available (appeared in 1.8). 
-   \index{Tools!mcrun}
-\item \verb+mcplot+, \verb+mcdisplay+, \verb+mcgui+ are now less dependent on the
-    \verb+perl/PDL/pgplot+ installed versions and fully work with Matlab/Scilab (appeared in 1.7). \index{Tools!mcplot}
-\item \verb+mcplot+ can plot a single simulation data file.
-\item \verb+mcplot+, \verb+mcresplot+, \verb+mcdisplay+ can output GIF, PS and color
-    PS files. They also have integrated help (-h options), and may generate output
-    files in a non interactive mode (read data, create output file, exit) (appeared in 1.7).
-\item \verb+mcplot+ and \verb+mcdisplay+ work with Matlab, PGPLOT and Scilab plotters
-   (depends on the \verb+MCSTAS_FORMAT+ environment variable, or -pPLOTTER option, or
-   PGPLOT if not set) (appeared in 1.7).
-\item \verb+mcplot+ may display parameter scan step results in all formats
-   (appeared in 1.8).  \index{Tools!mcplot}
-\item \verb+mcstas2vitess+ enables to convert a McStas component into a
-   Vitess~\cite{vitess_webpage} one (appeared in 1.7). \index{Tools!mcstas2vitess}
-\item \verb+mcresplot+ can plot projections of the 4D resolution function of an 
-   instrument obtained from the \verb+Res_sample+ and \verb+Res_monitor+ components.
-   In version \version, it only works with the McStas/PGPLOT format, 
-   but a port for Scilab/Matlab is under way (appeared in 1.7). \index{Tools!mcresplot}
-\item \verb+mcdoc+ can now display the pdf version of the manual, an
-  HTML catalog of the current library, as well as help for single
-  components. \index{Tools!mcdoc} The \verb+mcdoc+ functions have been
-  closely integrated into \verb+mcgui+ (appeared in 1.7). 
-\item \verb+mcdoc+ can document automatically instruments in the same way as components
- (appeared in 1.8).
-\item \verb+mcconvert+ is a new tool to convert \MCS\ result text files from Matlab to Scilab, 
-  and from Scilab to Matlab formats (appeared in 1.8). \index{Tools!mcconvert}
+\item Windows support improved (bugs \#3, 4, 51)
+\item {\bf Installation on Windows} systems \emph{requires} to use exclusively {\bf Perl 5.6}. Earlier versions will fail (bug \#3).
+\item Many small bug corrections related to Matlab/Scilab capabilities (bugs \#6, 7, 15, 16, 22, 24).
 \end{itemize}
 
 \section{Future extensions}
@@ -266,10 +100,8 @@ example instruments are
 The following features are planned for the oncoming releases of \MCS :
 \begin{itemize}
 \item Support for Matlab and Scilab in \verb+mcresplot+.
-\item Support for MPI (parallel processing library) in the runtime
 \item Language extension 'JUMP' for enabeling loops, 'teleporting'
   etc. in instrument descriptions.
-\item Concentric components.
 \item Polarised components and magnetic field computation components.
 \item Optimize a set of parameters for a better flux and/or resolution on a given monitor.
 \end{itemize}
