--- a/trunk/collimator_radial.tex
+++ b/trunk/collimator_radial.tex
@@ -1,6 +1,6 @@
 \section{Collimator\_radial: A radial Soller blade collimator}
 
-\component{Collimator\_radial}{System, E.Farhi}{$w_1$, $h_1$, $w_2$, $h_2$, $len$, $\theta_{min}$, $\theta_{max}$, $nchan$, $radius$, $divergence$ (in deg.)}{$nblades$, $roc$ and others}{validated, position is center of radius}
+\component{Collimator\_radial}{System, E.Farhi}{$w_1$, $h_1$, $w_2$, $h_2$, $len$, $\theta_{min}$, $\theta_{max}$, $nchan$, $radius$, $divergence$}{$nblades$, $roc$ and others}{validated, position is center of radius}
 
 \begin{figure}
   \begin{center}
