--- a/trunk/comp.tex
+++ b/trunk/comp.tex
@@ -59,7 +59,7 @@ the {\it file.comp} component, using your
 BROWSER\index{Environment variable!BROWSER} setting, or as text if unset.
 The \verb+--help+ option will display the command help, as usual.
 
-An overview of the component library is also given at the \MCS\ home page...
+An overview of the component library is also given in chapter \ref{s:components} and at the \MCS\ home page \cite{mcstas_webpage}...
 
 %\input{source}
 %\input{simple}
