--- a/trunk/manual.tex
+++ b/trunk/manual.tex
@@ -46,8 +46,8 @@
 \renewcommand{\footrulewidth}{0pt}}
 
 \newcommand{\MCS}{{McStas}}
-\newcommand{\version}{{1.8}}
-\newcommand{\reldate}{{January 29th, 2004}}
+\newcommand{\version}{{1.9}}
+\newcommand{\reldate}{{September, 2005}}
 \newcommand{\Ombold}{\mbox{\boldmath $\Omega$}}
 
 % enable index generation
@@ -83,6 +83,7 @@
 \include{intro}
 \include{changes}
 \include{install}
+\include{techniq}
 \include{running}
 \include{kernel}
 \include{techniq}
