--- a/trunk/mcstas.bib
+++ b/trunk/mcstas.bib
@@ -99,21 +99,29 @@
   note       = {See http://www.hmi.de/projects/ess/vitess/}
 }
 
+@misc{mcnsi_webpage,
+  note       = {See http://mcnsi.risoe.dk/}
+}
+
+@misc{nmi3_webpage,
+  note       = {See http://neutron-eu.net/en/}
+}
+
 @article{Copley86,
-   author    = {J. R. D. Copley,  P. Verkerk, A. A. van Well and H. Fredrikze},
+   author    = {J. R. D. Copley and  P. Verkerk and A. A. van Well and H. Fredrikze},
    journal   = {Comput. Phys. Commun.},
    pages     = {337},
    year      = {1986},
    volume    = {40}
 }
 @book{Grimmett92,
-   author    = {Grimmett, G. R. and Stirzaker, D. R.},
+   author    = {Grimmett and G. R. and Stirzakerand D. R.},
    title     = {Probability and Random Processes, 2nd Edition},
    year      = {1992},
    publisher = {Clarendon Press, Oxford}
 }
 @article{Leibnitz63,
-   author    = {H. Maeir-Leibnitz and T. Springer,},
+   author    = {H. Maeir-Leibnitz and T. Springer},
    journal   = {Reactor Sci. Technol.},
    pages     = {217},
    year      = {1963},
@@ -143,7 +151,7 @@
    volume    = {A510}
 }
 @article{Fermi47,
-   author    = {E. Fermi, J. Marshall, L. Marshall},
+   author    = {E. Fermi and J. Marshall and L. Marshall},
    journal   = {Phys. Rev.},
    pages     = {193},
    year      = {1947},
@@ -157,7 +165,7 @@
    volume    = {A540}
 }
 @article{Clark66,
-   author    = {C.D. Clark, E.W.J. Mitchell, D.W. Palmer and I.H. Wilson},
+   author    = {C.D. Clark and E.W.J. Mitchell and D.W. Palmer and I.H. Wilson},
    journal   = {J. Sci. Instrum.},
    pages     = {1},
    year      = {1966},
@@ -179,7 +187,7 @@
 }
 
 @book{Shirane02,
-   author    = {G. Shirane, S.M. Shapiro and J.M. Tranquada},
+   author    = {G. Shirane and S.M. Shapiro and J.M. Tranquada},
    title     = {Neutron Scattering with a Triple-Axis Spectrometer},
    year      = {2002},
    publisher = {Cambridge University Press}
@@ -199,14 +207,14 @@
    volume    = {NS-21}
 }
 @article{Charpak89,
-   author    = {V. Peskov, G. Charpak, W. Dominik and F. Sauli},
+   author    = {V. Peskov and G. Charpak and W. Dominik and F. Sauli},
    journal   = {Nucl. Instr. and Meth.},
    pages     = {547},
    year      = {1989},
    volume    = {A277}
 }
 @article{Manzin04,
-   author    = {G. Manzin, B. Guerard, F.A.F. Fraga, L.M.S. Margato},
+   author    = {G. Manzin and B. Guerard and F.A.F. Fraga and L.M.S. Margato},
    journal   = {Nucl. Instr. Meth.},
    pages     = {102},
    year      = {2004},
@@ -235,21 +243,21 @@
    volume    = {43}
 }
 @article{Farhi02,
-   author    = {E. Farhi, T. Hansen, A. Wildes, R. Ghosh and K. Lefmann},
+   author    = {E. Farhi and T. Hansen and A. Wildes and R. Ghosh and K. Lefmann},
    journal   = {Appl. Phys.},
    pages     = {S1471},
    year      = {2002},
    volume    = {A 74}
 }
 @article{Schanzer04,
-   author    = C. Schanzer, P. Boni, U. Filges, T. Hils},
+   author    = {C. Schanzer and P. Boni and U. Filges and T. Hils},
    journal   = {Nucl. Instr. Meth.},
    pages     = {63},
    year      = {2004},
    volume    = {A 529}
 }
 @article{Zsigmond04,
-   author    = {G. Zsigmond, K. Lieutenant, S. Manoshin et al.},
+   author    = {G. Zsigmond and K. Lieutenant and S. Manoshin et al.},
    journal   = nim,
    pages     = {218},
    year      = {2004},
@@ -263,21 +271,21 @@
    volume    = {17}
 }
 @article{Vitess,
-   author    = {D. Wechsler, G. Zsigmond, F. Streffer and F. Mezei},
+   author    = {D. Wechsler and G. Zsigmond and F. Streffer and F. Mezei},
    journal   = nn,
    pages     = {11},
    year      = {2000},
    volume    = {25}
 }
 @article{mcstas_pb,
-   author    = {P. Willendrup, E. Farhi and K. Lefmann},
+   author    = {P. Willendrup and E. Farhi and K. Lefmann},
    journal   = pb,
    pages     = {735},
    year      = {2004},
    volume    = {350}
 }
 @article{NISP,
-   author    = {P. A. Seeger, L. L. Daemen, T. G. Thelliez and R. P. Hjelm},
+   author    = {P. A. Seeger and L. L. Daemen and T. G. Thelliez and R. P. Hjelm},
    journal   = pb,
    pages     = {433},
    year      = {2000},
@@ -293,10 +301,44 @@
 }
 
 @article{Restrax,
-   author    = {J. Saroun, J. Kulda},
+   author    = {J. Saroun and J. Kulda},
    journal   = pb,
    pages     = {1102},
    year      = {1997},
    volume    = {234},
    note      = {See website http://omega.ujf.cas.cz/restrax/}
+}
+
+
+@book{mcstasmanual,
+   author    = {Peter Willendrup and Emmanuel Farhi and Kim Lefmann and and Klaus Lieutenant},
+   title     = {User and Programmers Guide to the Neutron Ray-Tracing Package McStas, Version 1.9},
+   year      = {2005},
+   publisher = {Risoe Report}
+}
+
+@misc{tripoli_webpage,
+  note       = {See http://www.nea.fr/html/dbprog/tripoli-abs.html}
+}
+
+@book{squires,
+  author    = {G.L. Squires},
+   title     = {Thermal Neutron Scattering},
+   year      = {1978},
+   publisher = {Cambridge University Press}
+}
+
+@book{bacon,
+  author    = {G.E. Bacon},
+   title     = {Neutron Diffraction},
+   year      = {1975},
+   publisher = {Oxford University Press}
+}
+
+@misc{crystallographica,
+  note       = {Crystallographica, Oxford Cryosystem, 1998. See http://www.crystallographica.com}
+}
+
+@misc{mczilla_webpage,
+   note      = {See http://neutron.risoe.dk/McZilla/}
 }
