--- a/trunk/preface.tex
+++ b/trunk/preface.tex
@@ -34,7 +34,7 @@ community, too numerous to mention here.
 In case of any errors, questions, or suggestions, %or other need for support should arise,
 %do not hesitate to
 contact the authors at \verb+mcstas@risoe.dk+
-or consult the \MCS\ WWW home page~\cite{mcstas_webpage}.
+or consult the \MCS\ WWW home page~\cite{mcstas_webpage}. A special bug/request reporting service is available \cite{mczilla_webpage}.
 
 If you {\bf appreciate} this software, please subscribe to the \verb+neutron-mc@risoe.dk+ email list, send us a smiley message, and contribute to the package. We also encourage you to refer to this software when publishing results, with the following citations:
 \begin{itemize}
@@ -57,6 +57,7 @@ to \MCS\ \version:
 \item{Chris Ling, ILL: ILL D9 instrument}
 \item{Lise Arleth, RIS\O: Helped the developer team regarding the new
   \verb+Sans_spheres+ component}
+\item{Geza Zsigmond helped a lot in porting his Fermi Chopper component from Vitess \cite{Vitess, vitess_webpage} to \MCS .}
 \end{itemize}
 Thank you guys! This is what \MCS\ is all about!
 
