--- a/trunk/risoe-rep-title.tex
+++ b/trunk/risoe-rep-title.tex
@@ -40,7 +40,7 @@
 \title{User~and~Programmers~Guide~to~\rlap{the}\\ % Avoid overfull message.
  Neutron~Ray-Tracing~Package\\
  \MCS, Version \version\ }
-\author{Peter Willendrup, Emmanuel Farhi, Kim Lefmann,\\ Per-Olof
- {\AA}strand, Marc Hagen and Kristian Nielsen}
+\author{Peter Willendrup, Emmanuel Farhi, Kim Lefmann,\\
+Klaus Lieutenant and Kristian Nielsen}
 \maketitle
 \endgroup
