--- a/trunk/sans.tex
+++ b/trunk/sans.tex
@@ -13,4 +13,4 @@ is neglected.
 The difference in scattering length density
 (the contrast) between the hard spheres and the medium is called $\Delta \rho$.
 
-{\bf Much more to write here, who will do that??}
+%{\bf Much more to write here, who will do that??}
