--- a/trunk/source_simple.tex
+++ b/trunk/source_simple.tex
@@ -29,5 +29,5 @@ times a solid-angle factor, which is basically the
 solid angle of the focusing rectangle.
 See also the discussion on focusing in the \MCS\ Manual \ref{s:focus}.
 
-This component replaces Source\_flat, Source\_flat\_lambda,
-Source\_flux and Source\_flux\_lambda.
+This component replaces Source\_flux\_lambda, Source\_flat, Source\_flat\_lambda, and
+Source\_flux.
