--- a/trunk/v_selector.tex
+++ b/trunk/v_selector.tex
@@ -69,4 +69,5 @@ the twist angle $\phi$ (in degrees), the blade thickness $t$ (in m),
 and the number of blades, $N$.
 
 The local coordinate system is centered at the slit centre.
+The component Selector produces equivalent results.
 
