--- a/trunk/guide.tex
+++ b/trunk/guide.tex
@@ -4,13 +4,13 @@
 
 This section describes advanced neutron optical
 components such as supermirrors and guides.
-The first subsection, however, contains 
+The first subsection, however, contains
 only a description of the reflectivity of a supermirror.
 
 \section{Mirror reflectivity}
 \label{s:mirrorreflect}
 To compute the reflectivity of the supermirrors, we use an empirical
-formula derived from experimental data (see figure~\ref{f:reflectivity}). 
+formula derived from experimental data (see figure~\ref{f:reflectivity}).
 The reflectivity is given by the following formula
 \begin{equation}
   R = \left\{
@@ -33,16 +33,16 @@ Eq.~(\protect\ref{e:reflectivity}).}
 Here $Q$ is the length of the scattering vector (in \AA$^{-1}$)
 defined by
 \begin{equation} \label{e:reflectivity}
-Q = |{\bf k}_{\bf i} - {\bf k}_{\bf f}| 
-  = \frac{m_{\rm n}}{\hbar} |{\bf v}_{\bf i} - {\bf v}_{\bf f}|, 
+Q = |{\bf k}_{\bf i} - {\bf k}_{\bf f}|
+  = \frac{m_{\rm n}}{\hbar} |{\bf v}_{\bf i} - {\bf v}_{\bf f}|,
 \end{equation}
-$m_{\rm n}$ being the neutron mass. 
+$m_{\rm n}$ being the neutron mass.
 The value $m$ is a parameter determined by the mirror materials,
 the bilayer sequence, and the number of bilayers.
 As can be seen, $R=R_0$ for $Q < Q_{\rm c}$, which is the
 critical scattering wave vector for a single layer of the mirror
 material. At higher values of $Q$, the reflectivity starts falling
-linearly with a slope $\alpha$ until a cut-off at $Q = m Q_{\rm c}$. 
+linearly with a slope $\alpha$ until a cut-off at $Q = m Q_{\rm c}$.
 The width of the cut-off is denoted $W$. For the curve in
 figure~\ref{f:reflectivity}, the values are
 $$ m=4 \qquad R_0=1 \qquad Q_{\rm c} = 0.02\mbox{ \AA}^{-1} \qquad
@@ -50,14 +50,16 @@ $$ m=4 \qquad R_0=1 \qquad Q_{\rm c} = 0.02\mbox{ \AA}^{-1} \qquad
 As a special case, if $m=0$ then the reflectivity is zero for all $Q$,
    \textit{ie.} the surface is completely absorbing.
 
-In the components, the neutron weight is adjusted with the amount $\pi_i = R$. 
+In the components, the neutron weight is adjusted with the amount $\pi_i = R$.
 To avoid spending large amounts of computation time on very low-weight
 neutrons, neutrons for which the reflectivity is lower than about
 $10^{-10}$ are ABSORB'ed.
 
 \section{Mirror: The single mirror}
 
-The component {\bf Mirror} 
+\component{Mirror}{System}{$l$, $h$, $m$}{$R_0, Q_c, W, \alpha$}{validated, no gravitation support}
+
+The component {\bf Mirror}
 models a single rectangular neutron mirror plate. It can
 be used to \textit{e.g.}~assemble a complete neutron guide by putting multiple
 mirror components at appropriate locations and orientations in the
@@ -65,12 +67,12 @@ instrument definition, much like a real guide is build from individual
 mirrors.
 
 The mirror is assumed to lie in the first quadrant of the
-$x$-$y$ plane, with one corner at $(0,0,0)$. 
+$x$-$y$ plane, with one corner at $(0,0,0)$.
 If the neutron trajectory intersects the mirror plate, it is
 reflected, otherwise it is left untouched. Since the mirror lies in the
-$x$-$y$ plane, an incoming neutron with velocity 
+$x$-$y$ plane, an incoming neutron with velocity
 ${\bf v}_{\rm i} = (v_x,v_y,v_z)$
-is reflected with velocity ${\bf v}_{\rm f} = (v_x,v_y,-v_z)$. 
+is reflected with velocity ${\bf v}_{\rm f} = (v_x,v_y,-v_z)$.
 The computation of the reflectivity is handled as detailed in
 section~\ref{s:mirrorreflect}.
 
@@ -78,10 +80,14 @@ The input parameters of this component are
 the rectangular mirror dimensions $(l, h)$
 and the values of $R_0, m, Q_c, W$, and $\alpha$ for the mirror.
 
+This component may produce wrong results with gravitation support.
+
 
 \section{Guide: The guide section}
 
-The component {\bf Guide} 
+\component{Guide}{System}{$w_1, h_1$, $w_2, h_2$, $l$, $m$}{$R_0, Q_c, W, \alpha$}{validated, no gravitation support}
+
+The component {\bf Guide}
 models a guide tube consisting of four flat mirrors. The
 guide is centered on the $z$ axis with rectangular entrance and exit
 openings parallel to the $x$-$y$ plane. The entrance has the dimensions
@@ -120,12 +126,12 @@ In the following, we refer to an arbitrary guide side by its origin
 With these definitions, the time of intersection of the neutron with a
 guide side can be computed by considering the projection onto the
 normal:
-\begin{equation} 
-t_1 = {({\bf O} - {\bf r}_0) \cdot {\bf n} \over {\bf v} \cdot {\bf n}} 
+\begin{equation}
+t_1 = {({\bf O} - {\bf r}_0) \cdot {\bf n} \over {\bf v} \cdot {\bf n}}
 \end{equation}
 For a neutron that leaves the guide through the guide exit we have
 \begin{equation}
-t_2 = {l - z_0 \over v_z} 
+t_2 = {l - z_0 \over v_z}
 \end{equation}
 To compute the interaction of the neutron
 with the guide, the neutron is initially propagated to the $z = 0$ plane of the
@@ -140,8 +146,8 @@ computed and the process is repeated until the neutron leaves the guide.
 The reflected velocity ${\bf v}_{\rm f}$ of the neutron with incoming velocity
 ${\bf v}_{\rm i}$ is computed by the formula
 \begin{equation}
- {\bf v}_{\rm f} = 
-  {\bf v}_{\rm i} 
+ {\bf v}_{\rm f} =
+  {\bf v}_{\rm i}
    - 2{{\bf n} \cdot {\bf v}_{\rm i} \over {|{\bf n}|^2}} {\bf n}
 \end{equation}
 This expression is arrived at by again considering the projection onto
@@ -152,7 +158,7 @@ mirror is taken into account as explained in section~\ref{s:mirrorreflect}.
   \begin{center}
     \includegraphics[width=0.5\textwidth]{figures/guide2.eps}
   \end{center}
-\caption{Neutron reflecting from mirror. ${\bf v}_{\rm i}$ and 
+\caption{Neutron reflecting from mirror. ${\bf v}_{\rm i}$ and
 ${\bf v}_{\rm f}$ are the initial and final velocities, respectively,
 and {\bf n} is a vector normal to the mirror surface.}
 \label{f:guidereflect}
@@ -160,8 +166,8 @@ and {\bf n} is a vector normal to the mirror surface.}
 
 There are a few optimizations possible here to avoid redundant
 computations. Since the neutron is always inside the guide during the
-computations, we always have 
-$({\bf O} - {\bf r}_0) \cdot {\bf n} \leq 0$. 
+computations, we always have
+$({\bf O} - {\bf r}_0) \cdot {\bf n} \leq 0$.
 Thus $t \leq 0$ if ${\bf v} \cdot {\bf n} \geq 0$, so in this case
 there is no need to actually compute $t$. Some redundant computations
 are also avoided by utilizing symmetry and the fact that many
@@ -173,11 +179,15 @@ guide, $(w_1, h_1)$ and $(w_2, h_2)$, respectively,
 the guide length, $l$,
 and the values of $R_0, m, Q_c, W$, and $\alpha$ for the mirror.
 
+This component may produce wrong results with gravitation support. Use Guide\_gravity (section \ref{s:guide_gravity}) in this case.
 
-\section{Channeled\_guide: A guide section component with multiple channels}
+
+\section{Guide\_channeled: A guide section component with multiple channels}
 \label{s:channeled_guide}
 
-The component Channeled\_guide is a more flexible variation of the Guide
+\component{Guide\_channeled}{System}{$w_1, h_1$, $w_2, h_2$, $l$, $k$, $m_x, m_y$}{$d, R_0, Q_{cx}, Q_{cy}, W, \alpha_x, \alpha_y$}{validated, no gravitation support}
+
+The component Guide\_channeled is a more flexible variation of the Guide
 component described in the previous section. It allows the specification
 of different supermirror parameters for the horizontal and vertical
 mirrors, and also implements guides with multiple channels as used in
@@ -201,3 +211,20 @@ channel walls, in meters; and \textit{R0}, \textit{W}, \textit{Qcx},
 set the supermirror parameters as described above (the names with \textit{x}
 denote the vertical mirrors, and those with \textit{y} denote the horizontal
 ones).
+
+This component may produce wrong results with gravitation support. Use Guide\_gravity (section \ref{s:guide_gravity}) in this case. Additionally, the focusing channeled geometry ($k > 1, w_1$ and $w_2$ different) is buggy (wall slopes is not computed correctly, and the component 'leaks' neutrons).
+
+
+\section{Guide\_gravity: A guide section component with multiple channels and gravitation handling}
+\label{s:guide_gravity}
+
+\component{Guide\_gravity}{System}{$w_1, h_1$, $w_2, h_2$, $l$, $k$, $m$}{$d, R_0, Q_c, W, \alpha$, wavy, chamfers, $k_h$, $n$, $G$}{fully validated, {\bf with} gravitation support}
+
+This component is a variation of the Guide\_channeled component (section \ref{s:channeled_guide}) with the ability to handle gravitation effects and functional channeled focusing geometry. Channels can be specified in two dimensions, producing a 2D array ($k, k_h$) on smaller guide channels.
+
+Waviness effects, supposed to be randomly distributed (\emph{i.e.} periodic waviness is not modeled here) can be specified globally, or for each part of the guide section. Additionally, chamfers (originating from the substrate manufacturing) may be defined the same way.
+
+The straight section of length $l$ may be divided into $n$ bits of same length within which chamfers are taken into account.
+
+To activate gravitation support, either select the \MCS\ gravitation support, or set the gravitation field strength $G$ (e.g. -9.81 on earth).
+
