--- a/trunk/monitors.tex
+++ b/trunk/monitors.tex
@@ -3,18 +3,18 @@
 \chapter{Monitors and detectors}
 
 In real neutron experiments, detectors and monitors play quite
-different roles. One wants the detectors to be as efficient as 
-possible, counting all neutrons (absorbing them in the process), 
+different roles. One wants the detectors to be as efficient as
+possible, counting all neutrons (absorbing them in the process),
 while the monitors measure the intensity of the incoming beam, and must
 as such be almost transparent, interacting only with (roughly) 0.1-1\%
-of the neutrons passing by. In computer simulations, it is 
-of course possible to detect every neutron without 
+of the neutrons passing by. In computer simulations, it is
+of course possible to detect every neutron without
 absorbing it or disturbing any of its parameters. Hence, the two components
 have very similar functions in the simulations, and we do
 not distinguish between them. For simplicity, they are from here on
 just called monitors, since they do not absorb neutrons.
 
-Another important difference between computer simulations 
+Another important difference between computer simulations
 and real experiments is
 that one may allow the monitor to be sensitive to any neutron property,
 as {\em e.g.} direction, energy, and divergence, in addition to what
@@ -23,13 +23,13 @@ fact, let the monitor have several of these properties at the same time,
 as seen for example in the energy sensitive monitor in
 section~\ref{s:e_monitor}.
 
-When a monitor detects a neutron ray, 
+When a monitor detects a neutron ray,
 a number counting variable is incremented: $n_i = n_{i-1}+1$
 In addition, the neutron
 weight $p_i$ is added to the weight counting variable:
-$I_i = I_{i-1} + p_i$, 
+$I_i = I_{i-1} + p_i$,
 and the second moment of the weight is
-updated: $M_{2,i} = M_{2,i-1} + p_i^2$. 
+updated: $M_{2,i} = M_{2,i-1} + p_i^2$.
 As also discussed in the System Manual, after a simulation of $N$ rays
 the detected intensity (in units of neutrons/sec.) is $I_N$,
 while the estimated errorbar is $\sqrt{M_{2,i}^2}$.
@@ -41,12 +41,13 @@ One example of the monitors we have omitted is the single monitor,
 {\bf Monitor},
 that measures just one number (with errorbars) per simulation.
 This effect is mirrored by any of the 1- or 2-dimensional detectors
-we support, e.g. the {\rm PSD\_monitor}. 
+we support, e.g. the {\rm PSD\_monitor}.
 In case additional functionality of monitors is required,
 the existing monitors can easily be modified.
-However, the ultimate solution is the use of the 
+
+However, the ultimate solution is the use of the
 ``Swiss army knife'' of monitors, {\rm Monitor\_nD}, that can face
-almost any simulation challenge. 
+almost any simulation challenge.
 
 \newpage
 \input{tof_monitor}
@@ -65,6 +66,9 @@ almost any simulation challenge.
 
 \newpage
 \input{divpos_monitor}
+
+\newpage
+\input{Monitor_nD}
 
 %\newpage
 %\input{monitor_nd}
