--- a/trunk/monochromator_curved.tex
+++ b/trunk/monochromator_curved.tex
@@ -6,12 +6,20 @@ a single scattering vector}
 
 \component{Monochromator\_curved}{System, Peter Link}{$z_{\rm w}$, $y_{\rm h}$, gap, $\eta_{\rm h}$, $\eta_{\rm v}$, $n_{\rm h}$, $n_{\rm v}$, $R_0$, $Q$, $r_{\rm h}$, $r_{\rm v}$}{$d_{\rm m}$, $\eta$, $h$, $w$, verbose, transmit, reflect}{}
 
+\begin{figure}
+  \begin{center}
+    \includegraphics[width=0.9\textwidth]{figures/monochromator_curved.eps}
+  \end{center}
+\caption{A curved monochromator}
+\label{f:monochromator_curved}
+\end{figure}
+
 
 This component simulates an array of infinitely thin single
 crystals with a single scattering vector perpendicular to the
 surface and a mosaic spread.
 This component is used to simulate a singly or doubly
-curved monochromator or analyzer.
+curved monochromator or analyzer, in reflecting geometry.
 
 The component uses  rectangular pieces of monochromator material
 as described in {\bf Monochromator\_curved}.
@@ -23,13 +31,14 @@ $n_{\rm v}$ and $n_{\rm h}$, respectively, and the vertical and horizontal
 radii of curvature are named $r_{\rm v}$ and $r_{\rm h}$, respectively.
 The scattering vector is named $Q$, and as described in
 {\bf Monochromator\_flat}, multiples of $Q$ can be applied.
+All single crystals are positioned in the same vertical plane, but tilted accordingly to the curvature radius.
 
 If just one mosaicity, $\eta$, is specified, this the same for
 both directions.
 
 The constant monochromator reflectivity, $R_0$ can be replaced by
 a file of tabulated reflectivities. In the same sense, the transmission
-can be modeled by a tabulated file.
+can be modeled by a tabulated file (for non reflected neutrons).
 
 As for {\bf Monochromator\_flat}, the crystal is assumed to be infinitely
 thin, and the varition in lattice spacing, ($\Delta d/d$),
