--- a/trunk/preface_comp.tex
+++ b/trunk/preface_comp.tex
@@ -6,7 +6,7 @@ This document contains information on the neutron scattering components
 which are the building blocks for defining instruments
 in the Monte Carlo neutron
 ray-tracing program \MCS\ version \version . The initial
-release in October 1998 of version 1.0 was presented in Ref.~\cite{NNews}.
+release in October 1998 of version 1.0 was presented in Ref.~\cite{nn_10_20}.
 The reader of this
 document is not supposed to have specific knowledge of neutron scattering,
 but some basic understanding of physics is helpful in
