--- a/trunk/source_gen.tex
+++ b/trunk/source_gen.tex
@@ -12,13 +12,21 @@ The flux spectrum is specified with the same Maxwellian parameters as in compone
 
 Maxwellian parameters for some sources are in the table given below. For some cases, a correction factor (multiply $I$ parameters) should be used to reach measured data.
 
-\begin{tabular}{cccccccc}
-\hline
-Source Name & $T_1$ & $I_1$ & $T_2$ & $I_2$ & $T_3$ & $I_3$ & factor \\
-\hline
-PSI cold source          & 150.42 & 3.67e11   & 38.74 & 3.64e11    & 14.84& 0.95e11    &\\
-ILL VCS cold source (H1) & 216.8  & 1.24e+13  & 33.9  & 1.02e+13   & 16.7 & 3.0423e+12 &\\
-ILL HCS cold source (H5) & 413.5  & 10.22e12  & 145.8 & 3.44e13    & 40.1 & 2.78e13    & *2\\
-ILL Thermal tube (H2)    & 683.7  & 0.5874e+13& 257.7 & 2.5099e+13 & 16.7 & 1.0343e+12 & /2.25\\
-ILL Hot source           & 1695   & 1.74e13   & 708   & 3.9e12     &      &            &\\
-\end{tabular}
+\begin{table}
+  \begin{center}
+  {\let\my=\\
+    \begin{tabular}{cccccccc}
+    \hline
+    Source Name & $T_1$ & $I_1$ & $T_2$ & $I_2$ & $T_3$ & $I_3$ & factor \\
+    \hline
+    PSI cold source & 150.42 & 3.67e11   & 38.74 & 3.64e11    & 14.84& 0.95e11    &\\
+    ILL VCS (H1)    & 216.8  & 1.24e13  & 33.9  & 1.02e13   & 16.7 & 3.0423e12 &\\
+    ILL HCS (H5)    & 413.5  & 10.22e12  & 145.8 & 3.44e13    & 40.1 & 2.78e13    & *2\\
+    ILL Thermal(H2) & 683.7  & 0.5874e13& 257.7 & 2.5099e13 & 16.7 & 1.0343e12 & /2.25\\
+    ILL Hot source  & 1695   & 1.74e13   & 708   & 3.9e12     &      &            &\\
+    \end{tabular}
+    \caption{Flux parameters for Source\_gen and Source\_Maxwell\_3}
+    \label{t:source-params}
+  }
+  \end{center}
+\end{table}
