--- a/trunk/techniq.tex
+++ b/trunk/techniq.tex
@@ -22,11 +22,11 @@ But achieving a satisfactory experiment on the best neutron spectrometer is not 
 \section{Neutron spectrometer simulations}
 
 Neutron scattering instruments are built as a series of neutron optics elements. Each of these elements modifies the beam characteristics (divergence, wavelength spread, spatial and time distributions, ...) in a way which may be modeled through analytical methods, for simplified neutron beam configurations.
-This stands for individual elements such as guides \cite{Leibnitz63,Mildner90}, choppers \cite{Lowde60,Copley03}, Fermi choppers \cite{Fermi47,Peters05}, velocity selectros \cite{Clark66}, monochromators \cite{Freund83,Sears97,Shirane02,Alianelli04}, and detectors \cite{Radeka74,Charpak89,Manzin04}.
+This stands for individual elements such as guides \cite{Leibnitz63,Mildner90}, choppers \cite{Lowde60,Copley03}, Fermi choppers \cite{Fermi47,Peters05}, velocity selectors \cite{Clark66}, monochromators \cite{Freund83,Sears97,Shirane02,Alianelli04}, and detectors \cite{Radeka74,Charpak89,Manzin04}.
 In the case of selected neutron instrument parts, one may use efficiently the so-called acceptance diagram theory \cite{Mildner90,Copley93,Cussen03} within which the neutron beam distributions are considered to be homogeneous or gaussian.
 But the concatenation of a high number of neutron optics, which indeed constitute real instruments, brings additional complexity by introducing strong correlations between neutron beam parameters: divergence and position - which is the basis of the acceptance diagram method - but also wavelength and time. The usual analytical methods (phase-space theory...) then reach their limit of validity in the description of the resulting fine effects.
 
-In principle, computing individual neutron event propagation at each instrument part, using analytical and numerical models as cited before, is not such a hard task. The use of probablilities is common to describe microscopic physical processes. Integrating all these events over the propagation path will result in an estimation of measurable quantities characterizing the neutron instrument. More over, using variance reduction ({\it e.g.} importance sampling), whenever possible, will both speed-up the computation and achieve a better accuracy. What we just sketched is nothing else than the basis of the Monte-Carlo (MC) method \cite{James80}, applied to neutron ray-tracing instrumentation.
+In principle, computing individual neutron event propagation at each instrument part, using analytical and numerical models as cited before, is not such a hard task. The use of probablilities is common to describe microscopic physical processes. Integrating all these events over the propagation path will result in an estimation of measurable quantities characterizing the neutron instrument. Moreover, using variance reduction ({\it e.g.} importance sampling), whenever possible, will both speed-up the computation and achieve a better accuracy. What we just sketched is nothing else than the basis of the Monte-Carlo (MC) method \cite{James80}, applied to neutron ray-tracing instrumentation.
 
 Mathematically, the Monte-Carlo method is an application of the law of large numbers \cite{James80,Grimmett92}. Let $f(u)$ be a finite continuous integrable function of parameter $u$ for which an integral estimate is desirable. The discrete statistical mean value of $f$ (computed as a series) in the uniformly sampled interval $a < u < b$ converges to the mathematical mean value of $f$ over the same interval.
 
@@ -34,9 +34,9 @@ Mathematically, the Monte-Carlo method is an application of the law of large num
 \lim_{n \rightarrow \infty} \frac{1}{n} \sum_{i=1, a \leq u_i \leq b}^n f(u_i) = \frac{1}{b-a}\int_a^b f(u) du
 \end{equation}
 
-In the case were the $u_i$ values are regularly sampled, we come to the well known midpoint integration rule. In the case were the $u_i$ values are randomly (but regularly) sampled, this is the Monte-Carlo integration technique. As random generators are not perfect, we rather talk about \emph{quasi}-Monte-Carlo technique.
+In the case were the $u_i$ values are regularly sampled, we come to the well known midpoint integration rule. In the case were the $u_i$ values are randomly (but regularly) sampled, this is the Monte-Carlo integration technique. As random generators are not perfect, we rather talk about \emph{quasi}-Monte-Carlo technique. We encourage the reader to refer to James \cite{James80} for a detailed review on the Monte-Carlo method.
 
-Eventhough early implementations of the method used {\emph home-made} computer programs  (see e.g. papers by J.R.D. Copley, D.F.R. Mildner, J.M. Carpenter, J. Cook), more general packages have been designed, providing models for most parts of the simulations.
+Eventhough early implementations of the method for neutron instruments used \emph{home-made} computer programs  (see e.g. papers by J.R.D. Copley, D.F.R. Mildner, J.M. Carpenter, J. Cook), more general packages have been designed, providing models for most parts of the simulations.
 These present existing packages are: NISP \cite{NISP}, ResTrax \cite{Restrax}, McStas \cite{nn_10_20,mcstas_pb,mcstas_webpage}, Vitess \cite{Vitess,vitess_webpage}, and IDEAS \cite{IDEAS}.
 Their usage usually covers all types of neutron spectrometers, most of the time through a user-friendly graphical interface, without requiring programming skills.
 
